workloads/adguard-home/kustomize/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: adguard-home
  labels:
    app.kubernetes.io/name: adguard-home

spec:
  replicas: 1
  revisionHistoryLimit: 3

  strategy:
    type: RollingUpdate

  selector:
    matchLabels:
      app.kubernetes.io/name: adguard-home

  template:
    metadata:
      labels:
        app.kubernetes.io/name: adguard-home

    spec:
      containers:
        - name: adguard-home
          image: adguard/adguardhome:latest

          # env:
          #   - name: TEST
          #     value: 'VALUE'

          ports:
            # Required for plain DNS.
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP

            # Required for running a DHCP server.
            - name: dhcp-udp
              containerPort: 67
              protocol: UDP
            - name: dhcp-tcp
              containerPort: 68
              protocol: TCP
            - name: dhcp-udp2
              containerPort: 68
              protocol: UDP

            # Required for the admin panel and for running a HTTPS/DNS-over-HTTPS server.
            - name: http-tcp
              containerPort: 80
              protocol: TCP
            - name: https-tcp
              containerPort: 443
              protocol: TCP
            - name: https-udp
              containerPort: 443
              protocol: UDP
            - name: https-tcp2
              containerPort: 3000
              protocol: TCP

            # Required for running a DNS-over-TLS server.
            - name: tls-tcp
              containerPort: 853
              protocol: TCP

            # Required for running a DNS-over-QUIC server.
            - name: quic-udp
              containerPort: 853
              protocol: UDP

            # Required for running a DNSCrypt server.
            - name: dnscrypt-tcp
              containerPort: 5443
              protocol: TCP
            - name: dnscrypt-udp
              containerPort: 5443
              protocol: UDP

            # Required for running a pprof debug API.
            # - name: pprof-tcp
            #   containerPort: 6060
            #   protocol: TCP

          # TODO: https://adguard-dns.io/kb/adguard-home/encryption/#reverse-proxy
          # To enable AdGuard Home to handle DNS-over-HTTPS requests from a reverse proxy server,
          # set the trusted_proxies setting in AdGuardHome.yaml to the IP address of the proxy server.
          # If you have several proxy servers, you can use a CIDR instead of a simple IP address.
          #
          # Aka, add the pod or service CIDR to the AdGuardHome.yaml file, or in the web UI?

          # TODO: Resources. At the very least, requests.
          # resources:
          #   limits:
          #     cpu:  0m
          #     memory: 0Mi
          #   requests:
          #     cpu: 0m
          #     memory: 0Mi

          # TODO: Probes
          # NOTE: https://adguard-dns.io/kb/adguard-home/docker/#health-check

          volumeMounts:
            # NOTE: Remember to add the certificates in the web UI!
            # REF: https://adguard-dns.io/kb/adguard-home/encryption/#configure
            - name: tls-volume
              mountPath: /tls
              readOnly: true

            - name: adguard-home-data
              subpath: /work
              mountPath: /opt/adguardhome/work
            - name: adguard-home-data
              subpath: /conf
              mountPath: /opt/adguardhome/conf

      volumes:
        - name: tls-volume
          secret:
            secretName: sidewinder-lan-tls

        - name: adguard-home-data
          persistentVolumeClaim:
            claimName: adguard-home-data
