workloads/adguard-home/kustomize/gateway.yaml
# Required for plain DNS.
---
apiVersion: gateway.networking.k8s.io/v1alpha2alpha2
kind: TCPRoute

metadata:
  name: homepage-dns-tcp

spec:
  parentRefs:
    - name: dns-gateway
      namespace: envoy-gateway-system
      sectionName: dns-tcp

  rules:
    - backendRefs:
        - name: adguard-home
          port: 53
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute

metadata:
  name: homepage-dhcp-tcp

spec:
  parentRefs:
    - name: dns-gateway
      namespace: envoy-gateway-system
      sectionName: dhcp-tcp

  rules:
    - backendRefs:
        - name: adguard-home
          port: 68
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute

metadata:
  name: homepage-http-tcp

spec:
  parentRefs:
    - name: dns-gateway
      namespace: envoy-gateway-system
      sectionName: http-tcp

  rules:
    - backendRefs:
        - name: adguard-home
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute

metadata:
  name: homepage-https-tcp

spec:
  parentRefs:
    - name: dns-gateway
      namespace: envoy-gateway-system
      sectionName: https-tcp

  rules:
    - backendRefs:
        - name: adguard-home
          port: 443
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute

metadata:
  name: homepage-https-tcp2

spec:
  parentRefs:
    - name: dns-gateway
      namespace: envoy-gateway-system
      sectionName: https-tcp2

  rules:
    - backendRefs:
        - name: adguard-home
          port: 3000

# Required for running a DNS-over-TLS server.
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute

metadata:
  name: homepage-tls-tcp

spec:
  parentRefs:
    - name: dns-gateway
      namespace: envoy-gateway-system
      sectionName: tls-tcp

  rules:
    - backendRefs:
        - name: adguard-home
          port: 853

# Required for running a DNS-over-QUIC server.
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute

metadata:
  name: homepage-dnscrypt-tcp

spec:
  parentRefs:
    - name: dns-gateway
      namespace: envoy-gateway-system
      sectionName: dnscrypt-tcp

  rules:
    - backendRefs:
        - name: adguard-home
          port: 5443
